chore: save changes before auth fix